feat: add header with styles

--- a/singolo1.html
+++ b/singolo1.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Singolo</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="singolo1.css">
 </head>
 <body>
-    
+    <div class="container">
+    <header class="header">
+            <div class="header__row">
+                <div class="header__col">
+                    <div class="header__logo">SINGOLO<span>*</span></div>  
+                </div>
+                <div class="header__col">
+                    <nav class="header__nav">
+                            <a href="#" class="header__nav__link active">Home</a>
+                            <a href="#" class="header__nav__link">SERVICES</a>
+                            <a href="#" class="header__nav__link">PORTFOLIO</a>
+                            <a href="#" class="header__nav__link">ABOUT</a>
+                            <a href="#" class="header__nav__link">CONTACT</a>
+                    </nav>
+                </div>
+            </div><!-- /.header__row -->
+    </header>
+    <main>
+   
+    </main>
+</div><!-- /.container -->
 </body>
 </html>
