feat: add slider block with styles

--- a/singolo1.html
+++ b/singolo1.html
@@ -26,7 +26,19 @@
             </div><!-- /.header__row -->
     </header>
     <main>
-   
+        <section class="slider">
+            <div class="slider__wrapper">
+                <div class="slider__item">
+                    <div class="slider__item__row">
+                        <div class="slider__item__col"><div class="slider__item__img left-img"><img src="assets/images/slider/iphone-vertical.png" alt=""></div>
+                        </div>
+                        <div class="slider__item__col"><div class="slider__item__img right-img"><img src="assets/images/slider/iphone-horizontal.png" alt=""></div></div>
+                    </div>
+                </div>
+                <button class="btn__arrow priew-arrow"></button>
+                <button class="btn__arrow next-arrow"></button>
+            </div><!-- /.slider__wrapper -->
+        </section>
     </main>
 </div><!-- /.container -->
 </body>
