feat: add services block with styles

--- a/singolo1.html
+++ b/singolo1.html
@@ -39,6 +39,110 @@
                 <button class="btn__arrow next-arrow"></button>
             </div><!-- /.slider__wrapper -->
         </section>
+        <section class="services">
+            <h2 class="services__title">Our Services</h2>
+            <div class="services__text">
+                    Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh. 
+            </div>
+            <div class="services__row">
+                <div class="services__col">
+                    <div class="services__item">
+                        <div class="services__img">
+                            <img src="assets/images/icon/Pen.png" alt="pen">
+                        </div>
+                        <div class="services__content">
+                            <h3>
+                                Custom Design
+                            </h3>
+                            <p>
+                                Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut, ultrices velit.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="services__col">
+                    <div class="services__item">
+                        <div class="services__img">
+                            <img src="assets/images/icon/Bulb.png" alt="Bulb">
+                        </div>
+                        <div class="services__content">
+                            <h3>
+                                Inovative Ideas
+                            </h3>
+                            <p>
+                                Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="services__col">
+                    <div class="services__item">
+                        <div class="services__img">
+                            <img src="assets/images/icon/Heart.png" alt="Heart">
+                        </div>
+                        <div class="services__content">
+                            <h3>
+                                Love Is The Answer
+                            </h3>
+                            <p>
+                                Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque condimentum.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="services__col">
+                    <div class="services__item">
+                        <div class="services__img">
+                            <img src="assets/images/icon/Phone.png" alt="Phone">
+                        </div>
+                        <div class="services__content">
+                            <h3>
+                                Responsive Layout
+                            </h3>
+                            <p>
+                                Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="services__col">
+                    <div class="services__item">
+                        <div class="services__img">
+                            <img src="assets/images/icon/Bubble.png" alt="Bubble">
+                        </div>
+                        <div class="services__content">
+                            <h3>
+                                24 / 7 Support
+                            </h3>
+                            <p>
+                                Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas venenatis lorem .
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="services__col">
+                    <div class="services__item">
+                        <div class="services__img">
+                            <img src="assets/images/icon/Star.png" alt="Star">
+                        </div>
+                        <div class="services__content">
+                            <h3>
+                                Feel Like A Star
+                            </h3>
+                            <p>
+                                Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+            </div><!-- /.services__row -->
+    </section>
     </main>
 </div><!-- /.container -->
 </body>
