--- a/singolo1.html
+++ b/singolo1.html
@@ -12,7 +12,7 @@
     <header class="header">
             <div class="header__row">
                 <div class="header__col">
-                    <div class="header__logo">SINGOLO<span>*</span></div>  
+                    <div class="header__logo"><h1>SINGOLO<span>*</span></h1></div>  
                 </div>
                 <div class="header__col">
                     <nav class="header__nav">
