feat: add js and styles for header and slider

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
                     <div class="header__logo"><h1>SINGOLO<span>*</span></h1></div>  
                 </div>
                 <div class="header__col">
-                    <nav class="header__nav">
+                    <nav class="header__nav" id='menu'>
                             <a href="#" class="header__nav__link active">Home</a>
-                            <a href="#" class="header__nav__link">SERVICES</a>
-                            <a href="#" class="header__nav__link">PORTFOLIO</a>
-                            <a href="#" class="header__nav__link">ABOUT</a>
-                            <a href="#" class="header__nav__link">CONTACT</a>
+                            <a href="#services" class="header__nav__link">SERVICES</a>
+                            <a href="#portfolio" class="header__nav__link">PORTFOLIO</a>
+                            <a href="#about" class="header__nav__link">ABOUT</a>
+                            <a href="#contact" class="header__nav__link">CONTACT</a>
                     </nav>
                 </div>
             </div><!-- /.header__row -->
@@ -28,18 +28,25 @@
     <main>
         <section class="slider">
             <div class="slider__wrapper">
+                <div class="slider__item active">
+                    <div class="black-display">
+                        <div class="black-display__ver-display"></div>
+                        <button class="black-display__ver-btn">
+                        </button>
+                        <div class="black-display__hor-display"></div>
+                        <button class="black-display__hor-btn">
+                        </button>
+                    <img src="assets/images/slider/Slide-1.png" alt="slide 1">
+                </div>
+                </div>
                 <div class="slider__item">
-                    <div class="slider__item__row">
-                        <div class="slider__item__col"><div class="slider__item__img left-img"><img src="assets/images/slider/iphone-vertical.png" alt=""></div>
-                        </div>
-                        <div class="slider__item__col"><div class="slider__item__img right-img"><img src="assets/images/slider/iphone-horizontal.png" alt=""></div></div>
-                    </div>
+                    <img src="assets/images/slider/Slide-2.png" alt="slide 2">
                 </div>
                 <button class="btn__arrow priew-arrow"></button>
                 <button class="btn__arrow next-arrow"></button>
             </div><!-- /.slider__wrapper -->
         </section>
-        <section class="services">
+        <section class="services" id="services">
             <h2 class="services__title">Our Services</h2>
             <div class="services__text">
                     Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh. 
@@ -143,7 +150,7 @@
 
             </div><!-- /.services__row -->
     </section>
-    <section class="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="portfolio__header">
             <h2>Portfolio</h2>
             <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.</p>
@@ -193,7 +200,7 @@
             </div>
         </div><!-- /.portfolio__row -->
 </section>
-<section class="about-us">
+<section class="about-us" id="about">
     <div class="about-us__header">
         <h2>About Us</h2>
         <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh</p>
@@ -252,7 +259,7 @@
         </div>
     </div><!-- /.about-us__row -->
 </section>
-<section class="commun">
+<section class="commun" id="contact">
     <div class="commun__header">
         <h2>Get a Quote</h2>
         <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
@@ -301,5 +308,9 @@
         </div>
     </footer>
 </div><!-- /.container -->
+
+<!-- scripts -->
+
+<script src="script.js"></script>
 </body>
 </html>
